--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1408,6 +1408,10 @@ h1 {
 .blog .post:first-child {
   border-top: 0;
 }
+.blog .post p,
+.blog .post li {
+  font-size: 14px;
+}
 .blog .dialogs,
 .blog .input-group {
   display: none;
