--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1221,6 +1221,8 @@ transform()
     border-top 1px solid #ccc
     &:first-child
       border-top 0
+    p,li
+      font-size 14px
   .dialogs
   .input-group
     display none
