--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1223,6 +1223,20 @@ transform()
       border-top 0
     p,li
       font-size 14px
+    .post-team
+      text-align center
+      li
+        list-style none
+        display inline-block
+        vertical-align top
+        margin 0 15px
+        width 200px
+        img
+          max-width 200px
+          max-height 200px
+          display block
+          margin 0 auto
+          margin-bottom 5px
   .dialogs
   .input-group
     display none
@@ -1248,7 +1262,7 @@ transform()
     width 200px
   .topic
   .topic-stuff
-    margin-left 210px
+    margin-left 10px
     padding-bottom 10px
   .lenta-item-bottom
     span
