--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -1,6 +1,8 @@
 
         <section class="forum page ng-cloak" ng-show="base.lentaIsActive" infinite-scroll="lenta.addMoreItems()" ng-cloak>
-            <div class="message-input clearfix">
+
+        <div ng-include="'templates/createTopic.html'" onload="ctrl=lenta; initCreateTopic(lenta);"></div>
+           <!-- <div class="message-input clearfix">
                 <textarea ng-model="lenta.wallMessageContent" class="no-resize" ng-keyup="base.messageChange($event,1)"
                     onblur="if(this.value=='') this.value='Написать сообщение';"
                     onfocus="if(this.value=='Написать сообщение') this.value='';"></textarea>
@@ -57,7 +59,7 @@
 
                 </div>
 
-            </div>
+            </div>-->
 
             <div class="lenta">
                 <div class="lenta-item" ng-repeat="wallItem in lenta.wallItems"
@@ -85,64 +87,67 @@
                                     <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })">{{wallItem.topic.authorName}}</a>
                                 </div>
 
-                                <div class="text" ng-switch-when="message" ng-hide="wallItem.topic.isEdit">{{wallItem.topic.message.content}}</div>
+                                <div ng-hide="wallItem.topic.isEdit">
+                                    <div class="text" ng-switch-when="message">{{wallItem.topic.message.content}}</div>
+
+                                    <div class="attached" ng-show="wallItem.topic.message.images.length || wallItem.topic.message.documents.length">
+                                        <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id}}" ng-repeat="image in wallItem.topic.message.images">
+                                            <img ng-src="{{image.URL}}" alt="картинка"/>
+                                        </a>
+                                        <div class="docs">
+                                            <div ng-repeat="document in wallItem.topic.message.documents"><a ng-href="{{document.URL}}" target="_blank" class="doc-item">{{document.fileName}}</a></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="poll" ng-switch-when="poll" ng-switch on="wallItem.topic.poll.alreadyPoll" >
+                                        <div class="text">{{wallItem.topic.message.content}}</div>
+
+                                        <h5>{{wallItem.topic.poll.subject}}</h5>
+
+                                        <!-- -->
+
+                                        <div class="poll-do" ng-switch-when="false">
+
+                                            <div class="radio" ng-repeat="variant in wallItem.topic.poll.editNames">
+                                                <label>
+                                                    <input name="poll-variant-{{wallItem.topic.id}}" ng-model="variant.value" value="1" type="radio" class="ace">
+                                                    <span class="lbl">{{variant.name}}</span>
+                                                </label>
+                                            </div>
+
+                                            <button class="btn btn-sm btn-primary no-border" ng-click="base.doPoll($event,wallItem.topic.poll)">Голосовать</button>
+
+                                        </div>
+                                        <!-- -->
+
+                                        <div class="poll-results" ng-switch-when="true">
+
+                                            <div class="poll-result-item"  ng-repeat="variant in wallItem.topic.poll.editNames">
+                                                <div class="poll-result-variant">{{variant.name}}</div>
+                                                <div class="poll-row">
+                                                    <div class="poll-row-line">
+                                                        <div class="poll-line-percent" ng-style="{width: variant.votersPercent}"></div>
+                                                        <div class="poll-line-number" style="width: 100%">{{variant.votersNum}}</div>
+                                                    </div>
+                                                    <div class="poll-row-percent">{{variant.votersPercent}}</div>
+                                                </div>
+                                            </div>
+
+                                            <div class="poll-result-amount">Проголосовало <span>{{wallItem.topic.poll.amount}}</span> человек</div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
 
                                 <div class="edit-message" ng-show="wallItem.topic.isEdit">
-                                    <textarea class="no-resize message-textarea edit-textarea" ng-model="wallItem.topic.message.content" ng-keyup="base.messageChange($event)" ng-hasfocus="wallItem.topic.isFocus"></textarea>
+                                    <!--<textarea class="no-resize message-textarea edit-textarea" ng-model="wallItem.topic.message.content" ng-keyup="base.messageChange($event)" ng-hasfocus="wallItem.topic.isFocus"></textarea>
 
-                                    <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(wallItem.topic,true)" href="#">Сохранить</a>
+                                    <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(wallItem.topic,true)" href="#">Сохранить</a>-->
 
-                                </div>
-
-                                <div class="attached" ng-show="wallItem.topic.message.images.length || wallItem.topic.message.documents.length">
-                                    <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id}}" ng-repeat="image in wallItem.topic.message.images">
-                                        <img ng-src="{{image.URL}}" alt="картинка"/>
-                                    </a>
-                                    <div class="docs">
-                                        <div ng-repeat="document in wallItem.topic.message.documents"><a ng-href="{{document.URL}}" target="_blank" class="doc-item">{{document.fileName}}</a></div>
-                                    </div>
-                                </div>
-
-                                <div class="poll" ng-switch-when="poll" ng-switch on="wallItem.topic.poll.alreadyPoll" >
-                                    <div class="text">{{wallItem.topic.message.content}}</div>
-
-                                    <h5>{{wallItem.topic.poll.subject}}</h5>
-
-                                    <!-- -->
-
-                                    <div class="poll-do" ng-switch-when="false">
-
-                                        <div class="radio" ng-repeat="variant in wallItem.topic.poll.editNames">
-                                            <label>
-                                                <input name="poll-variant-{{wallItem.topic.id}}" ng-model="variant.value" value="1" type="radio" class="ace">
-                                                <span class="lbl">{{variant.name}}</span>
-                                            </label>
-                                        </div>
-
-                                        <button class="btn btn-sm btn-primary no-border" ng-click="base.doPoll($event,wallItem.topic.poll)">Голосовать</button>
-
-                                    </div>
-                                    <!-- -->
-
-                                    <div class="poll-results" ng-switch-when="true">
-
-                                        <div class="poll-result-item"  ng-repeat="variant in wallItem.topic.poll.editNames">
-                                            <div class="poll-result-variant">{{variant.name}}</div>
-                                            <div class="poll-row">
-                                                <div class="poll-row-line">
-                                                    <div class="poll-line-percent" ng-style="{width: variant.votersPercent}"></div>
-                                                    <div class="poll-line-number" style="width: 100%">{{variant.votersNum}}</div>
-                                                </div>
-                                                <div class="poll-row-percent">{{variant.votersPercent}}</div>
-                                            </div>
-                                        </div>
-
-                                        <div class="poll-result-amount">Проголосовало <span>{{wallItem.topic.poll.amount}}</span> человек</div>
-
-                                    </div>
+                                    <div ng-include="'templates/createTopic.html'" onload="ctrl=wallItem.topic; initCreateTopic(wallItem.topic);"></div>
 
                                 </div>
-
 
                                 <div class="lenta-item-bottom">
                                     <a class="pull-right important-status" ng-class="{'important' : wallItem.topic.message.important == 1}" title='{{ wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"><i class="fa fa-star"></i> Важно</a>
