--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -1,7 +1,9 @@
 
     <section class="talks page ng-cloak" ng-show="base.talksIsActive">
 
-        <section class="create-topic" ng-hide="base.createTopicIsHide">
+        <div ng-include="'templates/createTopic.html'" onload="var ctrl = talks; ctrl.isTalks = true; initCreateTopic(talks);"></div>
+
+        <!--<section class="create-topic" ng-hide="base.createTopicIsHide">
             <div class="has-info form-group">
                 <input type="text" class="width-100 head" value="Заголовок"
                        onblur="if(this.value=='') this.value='Заголовок';"
@@ -74,7 +76,7 @@
 
             </div>
 
-        </section>
+        </section>-->
 
         <section class="talks-title-block">
 
