--- a/vonline_be/war/templates/createTopic.html
+++ b/vonline_be/war/templates/createTopic.html
@@ -1,5 +1,11 @@
 <div class="message-input clearfix">
 
+    <div class="has-info form-group" ng-if="ctrl.isTalk">
+        <input type="text" class="width-100 head" value="Заголовок"
+               onblur="if(this.value=='') this.value='Заголовок';"
+               onfocus="if(this.value=='Заголовок') this.value='';" ng-model="ctrl.subject" />
+    </div>
+
     <textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
               onblur="if(this.value=='') this.value='Написать сообщение';"
               onfocus="if(this.value=='Написать сообщение') this.value='';"></textarea>
