--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -291,6 +291,10 @@ transform()
   padding 0
   padding-bottom 5px
 
+.talks-single .widget-main
+.adverts-single .widget-main
+  overflow inherit
+
 .fa:hover{
   text-decoration none
 }
@@ -587,6 +591,11 @@ transform()
   .message-input-bottom
     margin-top 15px
 
+.talks-single .message-input
+.adverts-single .message-input
+  padding-left 0
+  padding-top 25px
+
 .message-tools
   margin-left 10%
   a
@@ -842,9 +851,6 @@ transform()
   a
     float right
     margin 15px 10px 15px 0
-
-.create-topic
-  padding 15px 10px
 
 .talks-title
   padding 10px
