--- a/vonline_be/war/partials/adverts.html
+++ b/vonline_be/war/partials/adverts.html
@@ -2,6 +2,10 @@
     <section class="adverts page ng-cloak" ng-show="base.advertsIsActive">
 
         <section class="create-topic" ng-hide="base.createTopicIsHide">
+            <div ng-include="'templates/createTopic.html'" onload="ctrl = adverts; initCreateTopic(adverts);"></div>
+        </section>
+
+<!--        <section class="create-topic" ng-hide="base.createTopicIsHide">
             <div class="has-info form-group">
                 <input type="text" class="width-100 head" value="Заголовок"
                        onblur="if(this.value=='') this.value='Заголовок';"
@@ -74,7 +78,7 @@
 
             </div>
 
-        </section>
+        </section>-->
 
         <section class="talks-title-block">
 
